# Robotics_course_work

base_controller/: CMakeLists.txt  package.xml
base_controller/launch/: a3.launch
base_controller/src/: base_controller.cpp
cubic_polynomial_planner/: CMakeLists.txt  package.xml
cubic_polynomial_planner/config/: a6.yaml  pose_controller.yaml
cubic_polynomial_planner/include/pose_command_action_server/: ActionServer.hpp  kinematic_controller.hpp
cubic_polynomial_planner/launch/: a6.launch  pose_action_server.launch
cubic_polynomial_planner/src/: cubic_polynomial_planner.cpp  inverse_kinematic_controller.cpp  pose_command_action_server.cpp
dynamic_controller/: CMakeLists.txt  package.xml
dynamic_controller/config/: joint_controller.yaml  pose_controller.yaml
dynamic_controller/launch/: joint_controller.launch  pose_controller.launch
dynamic_controller/src/: inverse_dynamic_controller.cpp  joint_dynamic_controller.cpp
highlevel_controller/: CMakeLists.txt  package.xml
highlevel_controller/config/: a7-clean-1.yaml  a7-clean-2.yaml  a7.yaml
highlevel_controller/include/highlevel_controller/: ActionClient.hpp
highlevel_controller/launch/: a7-clean-1.launch  a7-clean-2.launch  a7.launch
highlevel_controller/src/: ActionClient.cpp  client.cpp
highlevel_msgs/: CMakeLists.txt  package.xml
highlevel_msgs/action/: PoseCommand.action
highlevel_msgs/srv/: MoveTo.srv
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/launch/: a1.launch
keyboard_controller/src/: subscriber.cpp
kinematic_controller/: CMakeLists.txt  package.xml
kinematic_controller/launch/: joint_controller.launch  pose_controller.launch
kinematic_controller/src/: inverse_kinematic_controller.cpp  joint_kinematic_controller.cpp
potential_field_planner/: CMakeLists.txt  package.xml
potential_field_planner/src/: potential_field_planner.cpp
