<?xml version="1.0"?>
<package format="2">
  	<name>highlevel_controller</name>
  	<version>0.1.0</version>
  	<description>A highlevel controller using ros action to communicate with cubic planner</description>
  	<maintainer email="Alexandre.st-aubin2@mail.mcgill.ca">Alexandre St-Aubin</maintainer>
  	<license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <build_depend>roslint</build_depend>
  <build_depend>boost</build_depend>
  <depend>highlevel_msgs</depend>
  <depend>cubic_polynomial_planner</depend>
  <depend>actionlib</depend>
  <depend>kortex_gazebo</depend>
</package>

