<?xml version="1.0"?>
<package format="2">
  <name>keyboard_controller</name>
  <version>0.0.0</version>
  <description>The keyboard_controller package</description>
  <maintainer email="alexandre.st-aubin2@mail.mcgill.ca">Alexandre St-Aubin</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
