<?xml version="1.0"?>
<package format="2">
  <name>kinematic_controller</name>
  <version>0.1.0</version>
  <description>Kortex Planner</description>
  <maintainer email="Alexandre.St-Aubin2@mail.mcgill.ca">Alexandre St-Aubin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <build_depend>roslint</build_depend>
  <build_depend>boost</build_depend>
  <depend>highlevel_msgs</depend>  

</package>
