<?xml version="1.0"?>
<package format="2">
  <name>potential_field_planner</name>
  <version>0.0.0</version>
  <description>The potential_field_planner package</description>

  <maintainer email="alexandre.st-aubin2@mail.mcgill.ca">alexandre st-aubin</maintainer>
  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
 
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  
  <!-- depend: build, export, and execution dependency -->
  <depend>eigen</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <build_depend>roslint</build_depend>


</package>
